# ipx/docs/swagger.yaml
@@ -28,6 +28,17 @@ definitions:
       data:
         type: string
     type: object
+  misc.BalanceOfCalldataRequest:
+    properties:
+      account:
+        example: 0xDa70aA79f1a329719b9cf9d334b0a82b1d5269f3
+        type: string
+    type: object
+  misc.BalanceOfCalldataResponse:
+    properties:
+      data:
+        type: string
+    type: object
   misc.BalanceRequest:
     properties:
       address:
@@ -591,6 +602,46 @@ definitions:
       unsigned_rlp:
         type: string
     type: object
+  v2.BuildERC20EIP1559TransactionRequest:
+    properties:
+      amount:
+        example: "1000000000000000000"
+        type: string
+      contract:
+        example: 0x5FbDB2315678afecb367f032d93F642f64180aa3
+        type: string
+      from:
+        example: 0xDa70aA79f1a329719b9cf9d334b0a82b1d5269f3
+        type: string
+      to:
+        example: 0xDa70aA79f1a329719b9cf9d334b0a82b1d5269f3
+        type: string
+    type: object
+  v2.BuildERC20EIP1559TransactionResponse:
+    properties:
+      unsigned_rlp:
+        type: string
+    type: object
+  v2.BuildERC20LegacyTransactionRequest:
+    properties:
+      amount:
+        example: "1000000000000000000"
+        type: string
+      contract:
+        example: 0x5FbDB2315678afecb367f032d93F642f64180aa3
+        type: string
+      from:
+        example: 0xDa70aA79f1a329719b9cf9d334b0a82b1d5269f3
+        type: string
+      to:
+        example: 0xDa70aA79f1a329719b9cf9d334b0a82b1d5269f3
+        type: string
+    type: object
+  v2.BuildERC20LegacyTransactionResponse:
+    properties:
+      unsigned_rlp:
+        type: string
+    type: object
   v2.BuildNativeEIP1559TransactionRequest:
     properties:
       from:
@@ -617,6 +668,66 @@ definitions:
   v2.BuildNativeLegacyTransactionResponse:
     properties:
       unsigned_rlp:
+        type: string
+    type: object
+  v3.BuildERC20EIP1559TransactionRequest:
+    properties:
+      amount:
+        example: "1000000000000000000"
+        type: string
+      contract:
+        example: 0x5FbDB2315678afecb367f032d93F642f64180aa3
+        type: string
+      from:
+        example: 0xDa70aA79f1a329719b9cf9d334b0a82b1d5269f3
+        type: string
+      to:
+        example: 0xDa70aA79f1a329719b9cf9d334b0a82b1d5269f3
+        type: string
+    type: object
+  v3.BuildERC20EIP1559TransactionResponse:
+    properties:
+      r:
+        type: string
+      s:
+        type: string
+      signed_rlp:
+        type: string
+      tx_hash:
+        type: string
+      unsigned_rlp:
+        type: string
+      v:
+        type: string
+    type: object
+  v3.BuildERC20LegacyTransactionRequest:
+    properties:
+      amount:
+        example: "1000000000000000000"
+        type: string
+      contract:
+        example: 0x5FbDB2315678afecb367f032d93F642f64180aa3
+        type: string
+      from:
+        example: 0xDa70aA79f1a329719b9cf9d334b0a82b1d5269f3
+        type: string
+      to:
+        example: 0xDa70aA79f1a329719b9cf9d334b0a82b1d5269f3
+        type: string
+    type: object
+  v3.BuildERC20LegacyTransactionResponse:
+    properties:
+      r:
+        type: string
+      s:
+        type: string
+      signed_rlp:
+        type: string
+      tx_hash:
+        type: string
+      unsigned_rlp:
+        type: string
+      v:
         type: string
     type: object
   v3.BuildNativeEIP1559TransactionRequest:
@@ -655,6 +766,66 @@ definitions:
         type: string
     type: object
   v3.BuildNativeLegacyTransactionResponse:
+    properties:
+      r:
+        type: string
+      s:
+        type: string
+      signed_rlp:
+        type: string
+      tx_hash:
+        type: string
+      unsigned_rlp:
+        type: string
+      v:
+        type: string
+    type: object
+  v4.BuildERC20EIP1559TransactionRequest:
+    properties:
+      amount:
+        example: "1000000000000000000"
+        type: string
+      contract:
+        example: 0x5FbDB2315678afecb367f032d93F642f64180aa3
+        type: string
+      from:
+        example: 0xDa70aA79f1a329719b9cf9d334b0a82b1d5269f3
+        type: string
+      to:
+        example: 0xDa70aA79f1a329719b9cf9d334b0a82b1d5269f3
+        type: string
+    type: object
+  v4.BuildERC20EIP1559TransactionResponse:
+    properties:
+      r:
+        type: string
+      s:
+        type: string
+      signed_rlp:
+        type: string
+      tx_hash:
+        type: string
+      unsigned_rlp:
+        type: string
+      v:
+        type: string
+    type: object
+  v4.BuildERC20LegacyTransactionRequest:
+    properties:
+      amount:
+        example: "1000000000000000000"
+        type: string
+      contract:
+        example: 0x5FbDB2315678afecb367f032d93F642f64180aa3
+        type: string
+      from:
+        example: 0xDa70aA79f1a329719b9cf9d334b0a82b1d5269f3
+        type: string
+      to:
+        example: 0xDa70aA79f1a329719b9cf9d334b0a82b1d5269f3
+        type: string
+    type: object
+  v4.BuildERC20LegacyTransactionResponse:
     properties:
       r:
         type: string
@@ -869,6 +1040,34 @@ paths:
               type: string
             type: object
       summary: Build approve calldata
+      tags:
+      - abi
+  /evm/abi/encode/balance-of:
+    post:
+      consumes:
+      - application/json
+      description: Returns ABI-encoded calldata for balanceOf(address)
+      parameters:
+      - description: Account address
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/misc.BalanceOfCalldataRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/misc.BalanceOfCalldataResponse'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Build balanceOf calldata
       tags:
       - abi
   /evm/abi/encode/transfer:
@@ -1808,7 +2007,79 @@ paths:
       summary: Build an unsigned legacy native transfer transaction
       tags:
       - transaction
-  /evm/v2/transfers/native/eip1559:
+  /evm/v2/transaction/erc20/eip1559:
+    post:
+      consumes:
+      - application/json
+      description: Builds transfer(address,uint256) calldata internally and returns
+        the unsigned RLP-encoded EIP-1559 transaction. Gas limit is estimated on-chain
+        with a 20% buffer.
+      parameters:
+      - description: ERC-20 transfer request
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/v2.BuildERC20EIP1559TransactionRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/v2.BuildERC20EIP1559TransactionResponse'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "502":
+          description: Bad Gateway
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Build unsigned ERC-20 EIP-1559 transfer tx
+      tags:
+      - transfer
+  /evm/v2/transaction/erc20/legacy:
+    post:
+      consumes:
+      - application/json
+      description: Builds transfer(address,uint256) calldata internally and returns
+        the unsigned RLP-encoded EIP-155 legacy transaction. Gas limit is estimated
+        on-chain with a 20% buffer.
+      parameters:
+      - description: ERC-20 transfer request
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/v2.BuildERC20LegacyTransactionRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/v2.BuildERC20LegacyTransactionResponse'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "502":
+          description: Bad Gateway
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Build unsigned ERC-20 legacy transfer tx
+      tags:
+      - transfer
+  /evm/v2/transaction/native/eip1559:
     post:
       consumes:
       - application/json
@@ -1843,7 +2114,7 @@ paths:
       summary: Build unsigned EIP-1559 transfer tx
       tags:
       - transfer
-  /evm/v2/transfers/native/legacy:
+  /evm/v2/transaction/native/legacy:
     post:
       consumes:
       - application/json
@@ -1878,7 +2149,77 @@ paths:
       summary: Build unsigned legacy transfer tx
       tags:
       - transfer
-  /evm/v3/transactions/native/eip1559:
+  /evm/v3/transaction/erc20/eip1559:
+    post:
+      consumes:
+      - application/json
+      description: Builds transfer(address,uint256) calldata, estimates gas, signs
+        with the configured key, returns unsigned_rlp, signed_rlp, and tx_hash
+      parameters:
+      - description: ERC-20 transfer request
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/v3.BuildERC20EIP1559TransactionRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/v3.BuildERC20EIP1559TransactionResponse'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "502":
+          description: Bad Gateway
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Build and sign ERC-20 EIP-1559 transfer tx
+      tags:
+      - transaction
+  /evm/v3/transaction/erc20/legacy:
+    post:
+      consumes:
+      - application/json
+      description: Builds transfer(address,uint256) calldata, estimates gas, signs
+        with the configured key, returns unsigned_rlp, signed_rlp, and tx_hash
+      parameters:
+      - description: ERC-20 transfer request
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/v3.BuildERC20LegacyTransactionRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/v3.BuildERC20LegacyTransactionResponse'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "502":
+          description: Bad Gateway
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Build and sign ERC-20 legacy transfer tx
+      tags:
+      - transaction
+  /evm/v3/transaction/native/eip1559:
     post:
       consumes:
       - application/json
@@ -1913,7 +2254,7 @@ paths:
       summary: Build and sign EIP-1559 transfer tx
       tags:
       - transaction
-  /evm/v3/transactions/native/legacy:
+  /evm/v3/transaction/native/legacy:
     post:
       consumes:
       - application/json
@@ -1946,6 +2287,78 @@ paths:
               type: string
             type: object
       summary: Build and sign legacy transfer tx
+      tags:
+      - transaction
+  /evm/v4/transaction/erc20/eip1559:
+    post:
+      consumes:
+      - application/json
+      description: Builds transfer(address,uint256) calldata, estimates gas, signs
+        with the configured key, broadcasts, and returns unsigned_rlp, signed_rlp,
+        tx_hash, r, s, v
+      parameters:
+      - description: ERC-20 transfer request
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/v4.BuildERC20EIP1559TransactionRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/v4.BuildERC20EIP1559TransactionResponse'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "502":
+          description: Bad Gateway
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Build, sign, and send ERC-20 EIP-1559 transfer tx
+      tags:
+      - transaction
+  /evm/v4/transaction/erc20/legacy:
+    post:
+      consumes:
+      - application/json
+      description: Builds transfer(address,uint256) calldata, estimates gas, signs
+        with the configured key, broadcasts, and returns unsigned_rlp, signed_rlp,
+        tx_hash, r, s, v
+      parameters:
+      - description: ERC-20 transfer request
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/v4.BuildERC20LegacyTransactionRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/v4.BuildERC20LegacyTransactionResponse'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "502":
+          description: Bad Gateway
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Build, sign, and send ERC-20 legacy transfer tx
       tags:
       - transaction
   /evm/v4/transaction/native/eip1559:
